# clever-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
source/: Window.h  main.cpp
